--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,6 +1,10 @@
 {
   "name": "my-app",
   "version": "0.1.0",
+  "engines": {
+    "node": "16.x",
+    "npm": "8.x"
+  },
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,7 +15,7 @@
   "dependencies": {
     "@types/react-select": "^5.0.1",
     "@types/request-promise": "^4.1.48",
-    "next": "12.1.5",
+    "next": "^12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-select": "^5.3.0",
